[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" }
leafwing-input-manager = {version = "0.10.0"}
bevy-inspector-egui = "0.19"
bevy_egui = "0.21"
rand = "0.8.5"
rfd = "0.12"
wasm-bindgen-futures = "0.4.37"
egui_code_editor = "0.1.7"
rustpython-vm = "0.3.0"
egui_tiles = "0.3.1"
bevy_tweening = "0.8.0"
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build]
target = "wasm32-unknown-unknown"
incremental = true

