[workspace]
members = ["libs/python_interp"]

[package]
name = "dsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
bevy-inspector-egui = "0.19"
bevy_egui = "0.21"
rand = "0.8.5"
rfd = "0.12"
wasm-bindgen-futures = "0.4.37"
egui_code_editor = "0.1.7"
rustpython-vm = "0.3.0"
bevy_tweening = "0.8.0"
web-sys = "0.3.64"
egui_dock = "0.6.0"
bevy_prototype_lyon = "0.9.0"
#bevy_mod_picking = {version = "0.15.0", features=["all"]}
bevy_mod_picking = {git = "https://github.com/aevyrie/bevy_mod_picking/"}
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.commands]
watch = "cargo watch -x 'run --target wasm32-unknown-unknown --release'"
